public/css/main.css
body {
  padding-top: 4.5rem;
}

.alert-pre {
  word-wrap: break-word;
  word-break: break-all;
  white-space: pre-wrap;
}

.navbar-nav .nav-link {
  font-size: 10pt;
  letter-spacing: 1px;
}

h1 {
  font-size: 36pt;
  margin: 15px 0 15px 0;
}

h2 {
  font-size: 24pt;
  margin: 15px 0 15px 0;
}

h3 {
  font-size: 18pt;
  margin: 15px 0 15px 0;
}

h4 {
  font-size: 14pt;
}

h5 {
  font-size: 10pt;
}

.c-usermessage p {
  word-break: break-all;
  white-space: normal;
  margin: 0;
}

